feat/test: add GetTransaction query endpoint, controller, use case and service tests