@@ -1,23 +1,28 @@
 package dev.jossegonnza.personal_finance_manager.infrastructure.persistence;
 
 import dev.jossegonnza.personal_finance_manager.application.port.out.TransactionRepository;
+import dev.jossegonnza.personal_finance_manager.domain.model.Category;
 import dev.jossegonnza.personal_finance_manager.domain.model.Transaction;
 import org.springframework.stereotype.Repository;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 
 @Repository
 public class InMemoryTransactionRepository implements TransactionRepository {
-    private final List<Transaction> storage = new ArrayList<>();
+    private final Map<UUID, Transaction> storage = new HashMap<>();
+
+
+    @Override
+    public Optional<Transaction> findById(UUID transactionId) {
+        return Optional.ofNullable(storage.get(transactionId));
+    }
 
     @Override
     public void save(Transaction transaction) {
-        storage.add(transaction);
+        storage.put(transaction.id(), transaction);
     }
 
     public List<Transaction> findAll() {
-        return Collections.unmodifiableList(storage);
+        return List.copyOf(storage.values());
     }
 }
